# gas_adsorption_fitting

./: .gitignore  Ar_adsorption_fit.py  Ar_adsorption_fit_class.py  Ar_occupancy_1bar.txt  README.md  adsorptionFitClass.py  adsorptionFitGui.py  adsorption_fit_gui.py  adsorption_fit_gui.ui  adsorption_fit_gui_test.py  gas adsorption.ipynb  generation of plastic crystal methane rotator.csv  pyproject.toml  run_adsorption.py  twosite_interpore_test.py  xylene ads BaY.csv
gasAdsorptionFitting/: adsorptionFitClass.py  adsorptionFitGui.py
